--- a/style.css
+++ b/style.css
@@ -23,16 +23,25 @@ main {
 
 .profile-picture {
     margin: 0px auto;
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     overflow: hidden;
-    /* Agregamos un borde blanco */
     border: 8px solid #000;
+    background: linear-gradient(66deg, rgba(195, 44, 44, 1) 0%, rgba(236, 158, 5, 1) 100%);
 }
 
 .profile-picture img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+footer {
+    width: 100%;
+    background: linear-gradient(180deg, rgba(195,44,44,1) 0%, rgba(236,158,5,1) 100%);
+    color: white;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
 }
